# bezdna

./: .gitignore  README.md
.github/workflows/: go.yml
backend/: .env.example  Makefile  docker-compose.yaml  go.mod  go.sum
backend/cmd/: main.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/domain/: flag.go  service.go  stream.go
backend/internal/handler/: errors.go  handle_add_service.go  (+5 more)
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/bezdna/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
new-front/: app.vue  bun.lockb  nuxt.config.ts  package.json  types.ts
new-front/constants/: services.ts
new-front/pages/: index.vue
new-front/plugins/: websocket.client.ts
rust-backend/: .env.example  Cargo.toml  Makefile  ddos.sh  docker-compose.yaml
rust-backend/migrations/postgres/: 20230423210150_add_services_and_streams.sql  20240511012735_init.sql
rust-backend/src/: main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/domain/: mod.rs
rust-backend/src/handler/: create_service.rs  get_services.rs  get_streams_by_service_ids.rs  mod.rs  types.rs
rust-backend/src/repository/db/postgres/: mod.rs
rust-backend/src/repository/db/postgres/flags/: mod.rs  types.rs
rust-backend/src/repository/db/postgres/packets/: mod.rs  types.rs
rust-backend/src/repository/db/postgres/services/: mod.rs
rust-backend/src/repository/db/postgres/streams/: mod.rs
rust-backend/src/sniffer/: external_types.rs  internal_types.rs  mod.rs  sniffer.rs
(+40 files in other folders)
