[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
env_logger = "0.10.0"
futures = "0.3.29"
futures-util = "0.3.29"
hyper = "1.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
notify = "6.1.1"
pnet = "0.34.0"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
